gen/B314Parser.java
// Generated from /home/users/100/cedelhay/IdeaProjects/1718_INFOB314_COMPILATEUR_GROUPE04/src/main/antlr4/be/unamur/info/b314/compiler/B314.g4 by ANTLR 4.7
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class B314Parser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		BOOLEAN=1, INTEGER=2, SQUARE=3, TRUE=4, FALSE=5, AND=6, OR=7, NOT=8, AS=9, 
		INF=10, SUP=11, EQUAL=12, DPT=13, SCOL=14, LBR=15, RBR=16, COMMA=17, LPAR=18, 
		RPAR=19, PLUS=20, MINUS=21, MULT=22, DIV=23, MOD=24, SKIPP=25, IF=26, 
		THEN=27, DONE=28, ELSE=29, WHILE=30, DO=31, VOID=32, SET=33, TO=34, COMPUTE=35, 
		NEXT=36, NOTHING=37, FUNCTION=38, DECLARE=39, LOCAL=40, RETURN=41, IMPORT=42, 
		WLD=43, RETAIN=44, DEFAULT=45, ARENA=46, LATITUDE=47, LONGITUDE=48, GRID=49, 
		SIZE=50, MOVE=51, SHOOT=52, USE=53, MAP=54, RADIO=55, FRUITS=56, SODA=57, 
		AMMO=58, COUNT=59, GRAAL=60, IS=61, NORTH=62, SOUTH=63, EAST=64, WEST=65, 
		NEARBY=66, BY=67, DIRT=68, ROCK=69, VINES=70, ZOMBIE=71, PLAYER=72, ENNEMI=73, 
		LIFE=74, WHEN=75, YOUR=76, TURN=77, COML=78, COMR=79, ID=80, NUMBER=81, 
		COMMENT=82, NEWLINE=83, WS=84, LETTER=85;
	public static final int
		RULE_root = 0, RULE_type = 1, RULE_scalar = 2, RULE_array = 3, RULE_varDecl = 4, 
		RULE_arena = 5, RULE_item = 6, RULE_exprD = 7, RULE_exprEnt = 8, RULE_exprBool = 9, 
		RULE_exprCase = 10, RULE_exprG = 11, RULE_instruction = 12, RULE_action = 13, 
		RULE_fctDecl = 14, RULE_impDecl = 15, RULE_fileDecl = 16, RULE_fileName = 17, 
		RULE_programWorld = 18, RULE_clauseDefault = 19, RULE_programStrat = 20, 
		RULE_clauseWhen = 21, RULE_commentaire = 22, RULE_program = 23;
	public static final String[] ruleNames = {
		"root", "type", "scalar", "array", "varDecl", "arena", "item", "exprD", 
		"exprEnt", "exprBool", "exprCase", "exprG", "instruction", "action", "fctDecl", 
		"impDecl", "fileDecl", "fileName", "programWorld", "clauseDefault", "programStrat", 
		"clauseWhen", "commentaire", "program"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'boolean'", "'integer'", "'square'", "'true'", "'false'", "'and'", 
		"'or'", "'not'", "'as'", "'<'", "'>'", "'='", "':'", "';'", "'['", "']'", 
		"','", "'('", "')'", "'+'", "'-'", "'*'", "'/'", "'%'", "'skip'", "'if'", 
		"'then'", "'done'", "'else'", "'while'", "'do'", "'void'", "'set'", "'to'", 
		"'compute'", "'next'", "'nothing'", "'function'", "'declare'", "'local'", 
		"'return'", "'import'", "'wld'", "'retain'", "'default'", "'arena'", "'latitude'", 
		"'longitude'", "'grid'", "'size'", "'move'", "'shoot'", "'use'", "'map'", 
		"'radio'", "'fruits'", "'soda'", "'ammo'", "'count'", "'graal'", "'is'", 
		"'north'", "'south'", "'east'", "'west'", "'nearby'", "'by'", "'dirt'", 
		"'rock'", "'vines'", "'zombie'", "'player'", "'ennemi'", "'life'", "'when'", 
		"'your'", "'turn'", "'/*'", "'*/'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "BOOLEAN", "INTEGER", "SQUARE", "TRUE", "FALSE", "AND", "OR", "NOT", 
		"AS", "INF", "SUP", "EQUAL", "DPT", "SCOL", "LBR", "RBR", "COMMA", "LPAR", 
		"RPAR", "PLUS", "MINUS", "MULT", "DIV", "MOD", "SKIPP", "IF", "THEN", 
		"DONE", "ELSE", "WHILE", "DO", "VOID", "SET", "TO", "COMPUTE", "NEXT", 
		"NOTHING", "FUNCTION", "DECLARE", "LOCAL", "RETURN", "IMPORT", "WLD", 
		"RETAIN", "DEFAULT", "ARENA", "LATITUDE", "LONGITUDE", "GRID", "SIZE", 
		"MOVE", "SHOOT", "USE", "MAP", "RADIO", "FRUITS", "SODA", "AMMO", "COUNT", 
		"GRAAL", "IS", "NORTH", "SOUTH", "EAST", "WEST", "NEARBY", "BY", "DIRT", 
		"ROCK", "VINES", "ZOMBIE", "PLAYER", "ENNEMI", "LIFE", "WHEN", "YOUR", 
		"TURN", "COML", "COMR", "ID", "NUMBER", "COMMENT", "NEWLINE", "WS", "LETTER"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "B314.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public B314Parser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class RootContext extends ParserRuleContext {
		public ProgramContext program() {
			return getRuleContext(ProgramContext.class,0);
		}
		public RootContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_root; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof B314Listener ) ((B314Listener)listener).enterRoot(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof B314Listener ) ((B314Listener)listener).exitRoot(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof B314Visitor ) return ((B314Visitor<? extends T>)visitor).visitRoot(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RootContext root() throws RecognitionException {
		RootContext _localctx = new RootContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_root);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(48);
			program();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeContext extends ParserRuleContext {
		public TypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type; }
	 
		public TypeContext() { }
		public void copyFrom(TypeContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class TypeArrayContext extends TypeContext {
		public ArrayContext array() {
			return getRuleContext(ArrayContext.class,0);
		}
		public TypeArrayContext(TypeContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof B314Listener ) ((B314Listener)listener).enterTypeArray(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof B314Listener ) ((B314Listener)listener).exitTypeArray(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof B314Visitor ) return ((B314Visitor<? extends T>)visitor).visitTypeArray(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class TypeScalarContext extends TypeContext {
		public ScalarContext scalar() {
			return getRuleContext(ScalarContext.class,0);
		}
		public TypeScalarContext(TypeContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof B314Listener ) ((B314Listener)listener).enterTypeScalar(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof B314Listener ) ((B314Listener)listener).exitTypeScalar(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof B314Visitor ) return ((B314Visitor<? extends T>)visitor).visitTypeScalar(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TypeContext type() throws RecognitionException {
		TypeContext _localctx = new TypeContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_type);
		try {
			setState(52);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				_localctx = new TypeScalarContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(50);
				scalar();
				}
				break;
			case 2:
				_localctx = new TypeArrayContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(51);
				array();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ScalarContext extends ParserRuleContext {
		public ScalarContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_scalar; }
	 
		public ScalarContext() { }
		public void copyFrom(ScalarContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class ScalarSquareContext extends ScalarContext {
		public TerminalNode SQUARE() { return getToken(B314Parser.SQUARE, 0); }
		public ScalarSquareContext(ScalarContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof B314Listener ) ((B314Listener)listener).enterScalarSquare(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof B314Listener ) ((B314Listener)listener).exitScalarSquare(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof B314Visitor ) return ((B314Visitor<? extends T>)visitor).visitScalarSquare(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ScalarBoolContext extends ScalarContext {
		public TerminalNode BOOLEAN() { return getToken(B314Parser.BOOLEAN, 0); }
		public ScalarBoolContext(ScalarContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof B314Listener ) ((B314Listener)listener).enterScalarBool(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof B314Listener ) ((B314Listener)listener).exitScalarBool(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof B314Visitor ) return ((B314Visitor<? extends T>)visitor).visitScalarBool(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ScalarIntContext extends ScalarContext {
		public TerminalNode INTEGER() { return getToken(B314Parser.INTEGER, 0); }
		public ScalarIntContext(ScalarContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof B314Listener ) ((B314Listener)listener).enterScalarInt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof B314Listener ) ((B314Listener)listener).exitScalarInt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof B314Visitor ) return ((B314Visitor<? extends T>)visitor).visitScalarInt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ScalarContext scalar() throws RecognitionException {
		ScalarContext _localctx = new ScalarContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_scalar);
		try {
			setState(57);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case BOOLEAN:
				_localctx = new ScalarBoolContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(54);
				match(BOOLEAN);
				}
				break;
			case INTEGER:
				_localctx = new ScalarIntContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(55);
				match(INTEGER);
				}
				break;
			case SQUARE:
				_localctx = new ScalarSquareContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(56);
				match(SQUARE);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ArrayContext extends ParserRuleContext {
		public ArrayContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_array; }
	 
		public ArrayContext() { }
		public void copyFrom(ArrayContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class ValArrayContext extends ArrayContext {
		public ScalarContext scalar() {
			return getRuleContext(ScalarContext.class,0);
		}
		public TerminalNode LBR() { return getToken(B314Parser.LBR, 0); }
		public TerminalNode RBR() { return getToken(B314Parser.RBR, 0); }
		public List<TerminalNode> NUMBER() { return getTokens(B314Parser.NUMBER); }
		public TerminalNode NUMBER(int i) {
			return getToken(B314Parser.NUMBER, i);
		}
		public TerminalNode COMMA() { return getToken(B314Parser.COMMA, 0); }
		public ValArrayContext(ArrayContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof B314Listener ) ((B314Listener)listener).enterValArray(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof B314Listener ) ((B314Listener)listener).exitValArray(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof B314Visitor ) return ((B314Visitor<? extends T>)visitor).visitValArray(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ArrayContext array() throws RecognitionException {
		ArrayContext _localctx = new ArrayContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_array);
		int _la;
		try {
			_localctx = new ValArrayContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(59);
			scalar();
			setState(60);
			match(LBR);
			{
			setState(61);
			match(NUMBER);
			}
			setState(64);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==COMMA) {
				{
				setState(62);
				match(COMMA);
				{
				setState(63);
				match(NUMBER);
				}
				}
			}

			setState(66);
			match(RBR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VarDeclContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(B314Parser.ID, 0); }
		public TerminalNode AS() { return getToken(B314Parser.AS, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public VarDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varDecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof B314Listener ) ((B314Listener)listener).enterVarDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof B314Listener ) ((B314Listener)listener).exitVarDecl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof B314Visitor ) return ((B314Visitor<? extends T>)visitor).visitVarDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VarDeclContext varDecl() throws RecognitionException {
		VarDeclContext _localctx = new VarDeclContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_varDecl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(68);
			match(ID);
			setState(69);
			match(AS);
			setState(70);
			type();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ArenaContext extends ParserRuleContext {
		public ArenaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_arena; }
	 
		public ArenaContext() { }
		public void copyFrom(ArenaContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class ValArenaContext extends ArenaContext {
		public TerminalNode ARENA() { return getToken(B314Parser.ARENA, 0); }
		public TerminalNode AS() { return getToken(B314Parser.AS, 0); }
		public TerminalNode SQUARE() { return getToken(B314Parser.SQUARE, 0); }
		public TerminalNode LBR() { return getToken(B314Parser.LBR, 0); }
		public TerminalNode COMMA() { return getToken(B314Parser.COMMA, 0); }
		public TerminalNode RBR() { return getToken(B314Parser.RBR, 0); }
		public List<TerminalNode> NUMBER() { return getTokens(B314Parser.NUMBER); }
		public TerminalNode NUMBER(int i) {
			return getToken(B314Parser.NUMBER, i);
		}
		public ValArenaContext(ArenaContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof B314Listener ) ((B314Listener)listener).enterValArena(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof B314Listener ) ((B314Listener)listener).exitValArena(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof B314Visitor ) return ((B314Visitor<? extends T>)visitor).visitValArena(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ArenaContext arena() throws RecognitionException {
		ArenaContext _localctx = new ArenaContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_arena);
		int _la;
		try {
			_localctx = new ValArenaContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(72);
			match(ARENA);
			setState(73);
			match(AS);
			setState(74);
			match(SQUARE);
			setState(75);
			match(LBR);
			setState(77); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(76);
				match(NUMBER);
				}
				}
				setState(79); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==NUMBER );
			setState(81);
			match(COMMA);
			setState(83); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(82);
				match(NUMBER);
				}
				}
				setState(85); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==NUMBER );
			setState(87);
			match(RBR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ItemContext extends ParserRuleContext {
		public ItemContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_item; }
	 
		public ItemContext() { }
		public void copyFrom(ItemContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class ValItemSContext extends ItemContext {
		public TerminalNode SODA() { return getToken(B314Parser.SODA, 0); }
		public ValItemSContext(ItemContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof B314Listener ) ((B314Listener)listener).enterValItemS(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof B314Listener ) ((B314Listener)listener).exitValItemS(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof B314Visitor ) return ((B314Visitor<? extends T>)visitor).visitValItemS(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ValItemRContext extends ItemContext {
		public TerminalNode RADIO() { return getToken(B314Parser.RADIO, 0); }
		public ValItemRContext(ItemContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof B314Listener ) ((B314Listener)listener).enterValItemR(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof B314Listener ) ((B314Listener)listener).exitValItemR(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof B314Visitor ) return ((B314Visitor<? extends T>)visitor).visitValItemR(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ValItemMContext extends ItemContext {
		public TerminalNode MAP() { return getToken(B314Parser.MAP, 0); }
		public ValItemMContext(ItemContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof B314Listener ) ((B314Listener)listener).enterValItemM(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof B314Listener ) ((B314Listener)listener).exitValItemM(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof B314Visitor ) return ((B314Visitor<? extends T>)visitor).visitValItemM(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ValItemGContext extends ItemContext {
		public TerminalNode GRAAL() { return getToken(B314Parser.GRAAL, 0); }
		public ValItemGContext(ItemContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof B314Listener ) ((B314Listener)listener).enterValItemG(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof B314Listener ) ((B314Listener)listener).exitValItemG(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof B314Visitor ) return ((B314Visitor<? extends T>)visitor).visitValItemG(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ValItemFContext extends ItemContext {
		public TerminalNode FRUITS() { return getToken(B314Parser.FRUITS, 0); }
		public ValItemFContext(ItemContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof B314Listener ) ((B314Listener)listener).enterValItemF(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof B314Listener ) ((B314Listener)listener).exitValItemF(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof B314Visitor ) return ((B314Visitor<? extends T>)visitor).visitValItemF(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ItemContext item() throws RecognitionException {
		ItemContext _localctx = new ItemContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_item);
		try {
			setState(94);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case RADIO:
				_localctx = new ValItemRContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(89);
				match(RADIO);
				}
				break;
			case MAP:
				_localctx = new ValItemMContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(90);
				match(MAP);
				}
				break;
			case GRAAL:
				_localctx = new ValItemGContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(91);
				match(GRAAL);
				}
				break;
			case SODA:
				_localctx = new ValItemSContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(92);
				match(SODA);
				}
				break;
			case FRUITS:
				_localctx = new ValItemFContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(93);
				match(FRUITS);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
